[metadata]
name = florence_tool
version = 0.1.0
description = A Python tool for running Florence-2 tasks on images.
author = Your Name
author_email = hlky@hlky.ac
url = https://github.com/bigdata-pw/florence_tool
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
python_requires = >=3.7
install_requires =
    torch
    transformers
    Pillow
    tqdm
    requests

[options.packages.find]
where = src

[options.extras_require]
dev =
    black
    isort
    flake8
    mypy

[options.entry_points]
console_scripts =
    florence-tool = florence_tool.cli:cli
